# easy-exception

./: .travis.yml  CMakeLists.txt  _exception_8hpp_source.html  _helper_8hpp_source.html  _log_8hpp_source.html  _log_entry_8hpp_source.html  _log_retention_policy_8hpp_source.html  _logger_8hpp_source.html  _note_8hpp_source.html  _stacktrace_8hpp_source.html  _suspend_logging_8hpp_source.html  annotated.html  annotated_dup.js  classee_1_1_exception-members.html  classee_1_1_exception.html  classee_1_1_exception.js  classee_1_1_helper-members.html  classee_1_1_helper.html  classee_1_1_log-members.html  classee_1_1_log.html  classee_1_1_log.js  classee_1_1_log_entry-members.html  classee_1_1_log_entry.html  classee_1_1_log_entry.js  classee_1_1_log_retention_max_number-members.html  classee_1_1_log_retention_max_number.html  classee_1_1_log_retention_max_number.js  classee_1_1_log_retention_older_than-members.html  classee_1_1_log_retention_older_than.html  classee_1_1_log_retention_older_than.js  classee_1_1_log_retention_policy-members.html  classee_1_1_log_retention_policy.html  classee_1_1_log_retention_policy.js  classee_1_1_logger-members.html  classee_1_1_logger.html  classee_1_1_logger.js  classee_1_1_note-members.html  classee_1_1_note.html  classee_1_1_note.js  classee_1_1_stacktrace-members.html  (+20 more)
docs/: CMakeLists.txt  Doxyfile.in  main.md
examples/: CustomException.cpp  JsonException.cpp  SignalHandler.cpp  SimpleException.cpp  SimpleStacktrace.cpp
include/: Exception.hpp  Stacktrace.hpp
include/ee/: Exception.hpp  Log.hpp  LogEntry.hpp  Logger.hpp  Note.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js
src/: Exception.cpp  Log.cpp  LogEntry.cpp  Logger.cpp
test/android/app/: build.gradle
test/integrationtest/: CMakeLists.txt  Log.cpp
test/multipleincludes/: SampleOne.cpp  SampleThree.cpp  SampleThree.h  SampleTwo.cpp  SampleTwo.h  main.cpp
test/unittest/: CMakeLists.txt  Exception.cpp  Log.cpp  LogEntry.cpp  Note.cpp  SuspendLogging.cpp
tests/multipleincludes/: SampleOne.cpp  SampleOne.h  SampleThree.cpp  SampleTwo.cpp
